# ruby-wings-chatbot

./: .dockerignore  .env  .gitattributes  .gitignore  Dockerfile  Makefile  __init__.py  app.py  build.sh  build_index.py  common_utils.py  constraints.txt  docker-compose.dev.yml  docker-compose.yml  emb_tmp.npy  entities.py  faiss_index_meta.json  faiss_mapping.json  gunicorn.conf.py  index.faiss  index_metadata.json  knowledge.json  meta_capi.py  meta_param_builder.py  nginx.conf  pyproject.toml  redis.conf  render.yaml  requirements-minimal.txt  requirements.txt  response_guard.py  runtime.txt  test-sheet.js  tour_entities.json  vectors.npz
ruby-wings/ruby-wings-chatbot/: render.yaml
