[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ruby-wings-chatbot"
version = "1.0.0"
description = "Ruby Wings Chatbot v4.0"
authors = ["Ruby Wings Team"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.3.3"
gunicorn = "21.2.0"
openai = "1.3.0"
numpy = "1.24.3"
faiss-cpu = "1.7.4"
requests = "2.31.0"
google-auth = "2.23.4"
google-api-python-client = "2.104.0"
gspread = "5.12.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "1.0.0"
scipy = "1.10.1"
scikit-learn = "1.3.0"
pyvi = "0.1.1"
python-dotenv = "1.0.0"
Flask-CORS = "4.0.0"
httpx = "0.25.1"

[tool.poetry.group.dev.dependencies]

[project]
name = "ruby-wings-chatbot"
version = "1.0.0"